Fix done and invite pages dimensions on mobile

--- a/src/Modules/Home/Home.css
+++ b/src/Modules/Home/Home.css
@@ -1,5 +1,5 @@
 
-.arrow {
+.button-round {
   font-size: 1.8rem !important;
   border-radius: 50% !important;
   width: 65px;
